fix: Center hero text alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,8 @@ button{
 
 #hero>h1{
     font-size: 5rem;
+    text-align: center;
+
 }
 
 #hero>p{
